[package]
name = "silent_shot"
version = "0.1.0"
authors = ["Kolsky"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
user32-sys = "0.2.0"
winapi = { version = "0.3.9", features = ["winuser", "windef"] }
scrap = "0.5.0"
image = "0.23.8"
single-instance = "0.1.2"