[package]
name = "silent_shot"
version = "0.1.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi.version = "0.3"
winapi.features = ["dwmapi", "winuser"]
image = "0.23"
num_cpus = "1.13"
crossbeam-channel = "0.5"
native-windows-gui = "1.0"
late_init.git = "https://github.com/Kolsky/late_init"
single-instance = "0.3"
dirs = "4.0"
once_cell = "1.8"
os_str_bytes = "5.0"
# opencv = "0.60"

[profile.release]
lto = true
codegen-units = 1